--- a/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,8 +178,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 
 [ModuleFileTracking]
-AGI_FightingGame.TimeStamp=2018.04.25-14.38.33
-AGI_FightingGame.LastCompileMethod=Runtime
+AGI_FightingGame.TimeStamp=2018.04.27-09.23.37
+AGI_FightingGame.LastCompileMethod=External
 PakFile.TimeStamp=2017.11.20-16.07.15
 PakFile.LastCompileMethod=External
 SandboxFile.TimeStamp=2017.11.20-16.07.17
@@ -743,6 +743,8 @@ PhAT.LastCompileMethod=External
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/SideScrollerCPP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/SideScrollerCPP/Blueprints/P2_Character_BP.P2_Character_BP
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -762,8 +764,8 @@ AnimGraphNode_BlendSpaceBase="\"Object.Settings.Node\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[12]\" \"Object.Bindings.ActionMappings.ActionMappings[13]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[17]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Console.ConsoleKeys\" "
 AnimGraphNode_TransitionResult="\"Object.Settings.Node\" "
-SideScrollerCharacter_C="\"Object.Fist_Collision.RightHand.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.LeftFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.RightFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-AGI_FightingGameCharacter="\"Object.Fist_Collision.RightHand.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.LeftFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.RightFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SideScrollerCharacter_C=
+AGI_FightingGameCharacter=
 Character="\"Object.Fist_Collision.RightHand.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.LeftFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.RightFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Fist_Collision.RightHand.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.LeftFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Foot_Collision.RightFoot.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TextBlock="\"Object.Appearance.Font\" "
@@ -6021,6 +6023,18 @@ REINST_SideScrollerCharacter_C_67.Tags=True
 REINST_SideScrollerCharacter_C_67.ComponentReplication=True
 REINST_SideScrollerCharacter_C_67.Cooking=True
 REINST_SideScrollerCharacter_C_67.Events=True
+REINST_SideScrollerCharacter_C_79.Variable=True
+REINST_SideScrollerCharacter_C_79.TransformCommon=True
+REINST_SideScrollerCharacter_C_79.Sockets=True
+REINST_SideScrollerCharacter_C_79.Shape=True
+REINST_SideScrollerCharacter_C_79.Navigation=True
+REINST_SideScrollerCharacter_C_79.Rendering=True
+REINST_SideScrollerCharacter_C_79.Physics=True
+REINST_SideScrollerCharacter_C_79.Collision=True
+REINST_SideScrollerCharacter_C_79.Tags=True
+REINST_SideScrollerCharacter_C_79.ComponentReplication=True
+REINST_SideScrollerCharacter_C_79.Cooking=True
+REINST_SideScrollerCharacter_C_79.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Mannequin/Animations/ThirdPerson_IdleRun_2D.ThirdPerson_IdleRun_2D=0
