--- a/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/Engine.ini
+++ b/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/Engine.ini
@@ -24,11 +24,11 @@ JavaPath=(Path="")
 FlipNormalMapGreenChannel=False
 
 [WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
 
