--- a/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 P2_Character_BP_C=P2_Character_BP_C.Physics.ConstraintsGroup,P2_Character_BP_C.Rendering.TextureStreaming,P2_Character_BP_C.Rendering.LOD,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-CameraActor=CameraActor.Color Grading.Color Grading|Global,CameraActor.Lens.Lens|Image Effects,CameraActor.Lens.Lens|BloomAdvanced,CameraActor.Lens.Lens|Bloom,CameraActor.Lens.Lens|Dirt Mask,CameraActor.Lens.Lens|Auto Exposure,CameraActor.Lens.Lens|Lens Flares,CameraActor.Lens.Lens|Depth of FieldAdvanced,CameraActor.Lens.Lens|Depth of Field,CameraActor.Rendering Features.Rendering Features|Ambient Cubemap,CameraActor.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraActor.Rendering Features.Rendering Features|Ambient Occlusion,CameraActor.Rendering Features.Rendering Features|Global Illumination,CameraActor.Rendering Features.Rendering Features|Motion Blur,CameraActor.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraActor.Rendering Features.Rendering Features|Light Propagation Volume,
+CameraActor=CameraActor.Color Grading.Color Grading
 
 [ContentBrowser]
 SequenceBrowser.ActiveTypeFilters=
@@ -181,8 +181,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 
 [ModuleFileTracking]
-AGI_FightingGame.TimeStamp=2018.05.16-12.22.24
-AGI_FightingGame.LastCompileMethod=External
+AGI_FightingGame.TimeStamp=2018.05.16-14.04.01
+AGI_FightingGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.11.20-16.07.15
 PakFile.LastCompileMethod=External
 SandboxFile.TimeStamp=2017.11.20-16.07.17
@@ -743,13 +743,11 @@ MaterialEditor.TimeStamp=2017.09.27-12.30.25
 MaterialEditor.LastCompileMethod=Unknown
 PhAT.TimeStamp=2017.11.20-16.07.15
 PhAT.LastCompileMethod=External
+UATHelper.TimeStamp=2017.09.27-12.30.33
+UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap
-OpenAssetsAtExit=/Game/BP_MyFighterGameInstance.BP_MyFighterGameInstance
-OpenAssetsAtExit=/Game/SideScrollerCPP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
-OpenAssetsAtExit=/Game/SideScrollerCPP/Blueprints/P2_Character_BP.P2_Character_BP
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
