--- a/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AGI_Project-develop/AGI_FightingGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -181,7 +181,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 
 [ModuleFileTracking]
-AGI_FightingGame.TimeStamp=2018.05.16-14.04.01
+AGI_FightingGame.TimeStamp=2018.05.17-09.10.30
 AGI_FightingGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.11.20-16.07.15
 PakFile.LastCompileMethod=External
@@ -747,7 +747,7 @@ UATHelper.TimeStamp=2017.09.27-12.30.33
 UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -7630,7 +7630,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [RootWindow]
-ScreenPosition=X=-1336.000 Y=418.000
+ScreenPosition=X=-1571.000 Y=340.000
 WindowSize=X=850.000 Y=720.000
 InitiallyMaximized=True
 
